--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Description: SPRING is to estimate sparse microbial association networks using r
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 2.10)
 Imports: mixedCCA, huge, SpiecEasi, pulsar
 Suggests: 
     testthat (>= 2.1.0)
