--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: SPRING
 Title: Semi-Parametric Rank-based approach for INference in Graphical model (SPRING)
-Version: 1.0.3
+Version: 1.0.4
 Authors@R: c(
     person(given = "Grace",
            family = "Yoon",
            role = c("aut", "cre"),
-           email = "gyoon@stat.tamu.edu",
+           email = "gyoon6067@gmail.com",
            comment = c(ORCID = "0000-0003-3263-1352")),
     person(given = "Irina",
            family = "Gaynanova",
@@ -21,7 +21,7 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 2.10)
 Imports: mixedCCA, SpiecEasi, huge, pulsar, rootSolve, mvtnorm, stats
-Remotes: irinagain/mixedCCA
+Remotes: irinagain/mixedCCA, zdk123/SpiecEasi
 Suggests: 
     testthat (>= 2.1.0)
 RoxygenNote: 7.1.0
